fix: Adding sidenav changes behind the feature flag (#14835)

--- a/src/modules/10-common/navigation/MainNav/MainNav.module.scss
+++ b/src/modules/10-common/navigation/MainNav/MainNav.module.scss
@@ -20,10 +20,16 @@
   flex-direction: column;
   justify-content: space-between;
   z-index: 16;
-  height: 100vh;
+
+  /* sticky positioning */
+  height: var(--page-min-height);
   position: sticky;
   bottom: 0;
   align-self: flex-end;
+
+  &.newNav {
+    height: 100vh;
+  }
 
   &.recessed {
     /* stylelint-disable  color-no-hex */
