--- a/src/modules/10-common/navigation/SideNav/SideNav.module.scss
+++ b/src/modules/10-common/navigation/SideNav/SideNav.module.scss
@@ -10,9 +10,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
-  min-height: 100vh;
+
   /* sticky positioning */
+  height: var(--page-min-height);
   position: sticky;
   bottom: 0;
   align-self: flex-end;
@@ -20,6 +20,11 @@
   width: 12px;
   transition: width 300ms cubic-bezier(0.2, 0, 0, 1) 0s;
   box-shadow: 4px 8px 16px rgba(96, 97, 112, 0.25);
+
+  &.newNav {
+    height: 100%;
+    min-height: 100vh;
+  }
 
   & > * {
     opacity: 0;
